bug fixes done and improved layouts

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -15,6 +15,10 @@ $headers-font: "Raleway", "Helvetica", "sans-serif";
 // }
 // $my-font: "Font Name";
 
+.color-text{
+  color:white;
+}
+
 .image-popup-container {
   font-family: 'Raleway';
   font-size: 20px;
