--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,8 +1,10 @@
-<div class="container">
-  <div class="row org-card-container">
-    <% @organizations.each do |org| %>
-      <%= render 'shared/org_card', org: org  %>
-    <% end %>
+<div class ="content-vertical-space">
+  <div class="container">
+    <%= render 'shared/tabs_index_bootstrap_tabs', texto: "Companies that leverage knowledge with Stepify" %>
+    <div class="container steplist-cards-background" style= "background-color: #284f8a;">
+      <% @organizations.each do |org| %>
+        <%= render 'shared/org_card', org: org  %>
+      <% end %>
   </div>
 </div>
 
