--- a/app/views/pages/my_orgs.html.erb
+++ b/app/views/pages/my_orgs.html.erb
@@ -1,4 +1,4 @@
-<% texto = "Company"%>
+<% texto = "You are a member of this companies on Stepify"%>
 <div class = "content-vertical-space">
   <div class="container">
     <%= render 'shared/tabs_index_bootstrap_tabs', texto: texto%>
