--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -4,6 +4,9 @@
   <div class="container">
     <%= render 'shared/tabs_index_bootstrap_tabs', texto: texto%>
     <div class="container steplist-cards-background" style="padding-top: 40px; background-color: #284f8a;">
+      <p>
+        Your search for: "<%=params[:query]%>" produced <%= @steplists.count  %> results
+      </p>
       <% @steplists.each do  |steplist|%>
         <%= render 'shared/steplist_card', steplist: steplist %>
       <% end %>
