--- a/app/views/shared/_org_card.html.erb
+++ b/app/views/shared/_org_card.html.erb
@@ -10,19 +10,19 @@
 
 
 
-<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
 
     <div class="org-card ">
       <div class="steplist-card-body">
 
 
-<div class="col-xs-12 col-sm-6" style="text-align: center;">
+      <div class="row org-logo-row" style="text-align: center;">
         <div class="org-thumbnail">
           <%= image_tag logo_path, class: "portrait" %>
         </div>
       </div>
 
-      <div class="col-xs-12 col-sm-6">
+      <div >
         <div class="org-card-description">
           <h2 ><%= org.company_name %></h2>
           <h6 class="steplist-card-steps"> <%= org.steplists.where(private: false).count %> Public steplists </h6>
