--- a/app/assets/stylesheets/pages/_steplists-index.scss
+++ b/app/assets/stylesheets/pages/_steplists-index.scss
@@ -1,8 +1,3 @@
-.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
-    color: #fc6e5c;
-    background-color: #294f89;
-    border: 1px solid #ddd0;
-    border-bottom-color: transparent;
-    cursor: default;
+#search-message{
+  color: white;
 }
-
