--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
             <% end %>
             <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
               <li style="margin-left: 20px">
-                <%= current_user.first_name.capitalize %>
+                Hello, <%= current_user.first_name.capitalize %>
               </li>
               <li>
                 <%= link_to account_path do %>
