--- a/app/assets/stylesheets/pages/_steplists-index.scss
+++ b/app/assets/stylesheets/pages/_steplists-index.scss
@@ -2,9 +2,10 @@
   color: white;
 }
 
-#dashboard-text{
+.dashboard-text{
   color: white;
-  td {
-  font-weight: light;
+  th{
+  font-weight: lighter !important;
   }
-}
+  }
+
