Fixed steplist show background

--- a/app/views/steplists/show.html.erb
+++ b/app/views/steplists/show.html.erb
@@ -1,5 +1,4 @@
-
-<div style="background-color: #1C375D;">
+<div class ="content-vertical-space">
 <div class="container" style="display: flex; justify-content: center; ">
 
   <!-- Steplist header -->
