--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,10 +5,12 @@
   display: flex;
   text-align: center;
   justify-content: center;
+  align-items: center;
+
 }
 .home-banner-container{
 
-    text-align: center;
+  text-align: center;
   justify-content: center;
 }
 
