--- a/app/assets/stylesheets/components/_steplist-card.scss
+++ b/app/assets/stylesheets/components/_steplist-card.scss
@@ -47,6 +47,9 @@
   opacity: 0.7;
   font-size: 12px;
 }
+.steplist-card-body {
+  cursor: pointer;
+}
 
 .steplist-cards-steps{
   font-weight: thin !important;
