Added link to home banner button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container home-banner-container">
     <div home-banner-container><%= image_tag "logo4.png"%>
     <h3 class="dashboard-text">Share knowledge, step by step.</h3>
-    <div class="btn btn-success home-banner-button">Take your first step</div>
+    <%= link_to "Take your first step now", steplists_path, class: "btn btn-success home-banner-button" %>
     </div>
   </div>
 </div>
