--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <title>Stepify - Every Step counts</title>
     <meta name="description" content="Create and find simple easy-to-follow steplists to acomplish all types and tasks" >
     <meta property="og:title" content="Stepify, every step counts">
-    <meta property="og:image" content="#">
+    <meta property="og:image" content="http://res.cloudinary.com/dkkvtcelc/image/upload/v1524176021/meta_card_stepify.png">
     <meta property="og:description" content="Stepify is the online tool for craft, find and share the steplists towards anything and everything">
     <meta property="og:site_name" content="Stepify"/>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,700,700i" rel="stylesheet">
