--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class = "row main-banner">
   <div class="container home-banner-container">
-    <div home-banner-container><%= image_tag "logo4.png"%>
+    <%= image_tag "logo4.png", class: "home-logo"%>
     <h3 class="dashboard-text">Share knowledge, step by step.</h3>
     <%= link_to "Take your first step now", steplists_path, class: "btn btn-success home-banner-button" %>
     </div>
