--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,7 +9,6 @@
 
 }
 .home-banner-container{
-
   text-align: center;
   justify-content: center;
 }
@@ -25,4 +24,5 @@
 
 .home-logo{
   margin-top: 20px;
+  max-width: 300px;
 }
