New sections in home + navicon with correct color

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,24 @@
     <%= link_to "Take your first step now", steplists_path, class: "btn btn-success home-banner-button" %>
     </div>
   </div>
+
+
+<div class = "row">
+  <div class="container">
+    <div class="col-xs-12 col-lg-4">
+      Image
+    </div>
+    <div class="col-xs-12 col-lg-8">
+      Features
+      <ul>
+        <li>First feature</li>
+        <li>Second feature</li>
+        <li>Third feature</li>
+        <li>Last feature</li>
+      </ul>
+    </div>
+  </div>
 </div>
 
- <%= link_to "Crate new steplist", new_steplist_path, class: 'btn btn-success btn-lg' %>
+
 </div>
