--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <meta property="og:image" content="http://res.cloudinary.com/dkkvtcelc/image/upload/v1524176021/meta_card_stepify.png">
     <meta property="og:description" content="Stepify is the online tool for craft, find and share the steplists towards anything and everything">
     <meta property="og:site_name" content="Stepify"/>
+    <meta name="google-site-verification" content="0APsCqqgnSbCUoNQXbSTlS-6gJMZCGQg-_61skl_Sbk" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,700,700i" rel="stylesheet">
 
 
