--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,42 +3,67 @@
 
     <!-- Avatar with dropdown menu -->
 
-     <div class="navbar-wagon-right hidden-xs hidden-sm" style="float: right; margin-top: 5px;">
-        <div class="navbar-wagon-item">
-          <div class="dropdown">
-            <% if current_user.user_photo.present? %>
-              <%= cl_image_tag current_user.user_photo,class: "stepify-avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown"   %>
-              <% else %>
-              <%= image_tag "avatar_test.png", class: "stepify-avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+  <div class="navbar-wagon-right hidden-xs hidden-sm" style="float: right; margin-top: 5px;">
+    <div class="navbar-wagon-item">
+      <div class="dropdown">
+        <% if current_user.user_photo.present? %>
+          <%= cl_image_tag current_user.user_photo,class: "stepify-avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown"   %>
+          <% else %>
+          <%= image_tag "avatar_test.png", class: "stepify-avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+        <% end %>
+        <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+          <li style="margin-left: 20px">
+            Hello, <%= current_user.first_name.capitalize %>
+          </li>
+          <li>
+            <%= link_to account_path do %>
+            <%= t(".account", default: "Account") %>
             <% end %>
-            <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-              <li style="margin-left: 20px">
-                Hello, <%= current_user.first_name.capitalize %>
-              </li>
-              <li>
-                <%= link_to account_path do %>
-                <%= t(".account", default: "Account") %>
-                <% end %>
-              </li>
-              <li>
-                <%= link_to "#" do %>
-                <%= t(".settings", default: "Settings") %>
-                <% end %>
-              </li>
-              <li>
-                <%= link_to destroy_user_session_path, method: :delete do %>
-                <%= t(".sign_out", default: "Log out") %>
-                <% end %>
-              </li>
-            </ul>
-          </div>
-        </div>
+          </li>
+          <li>
+            <%= link_to "#" do %>
+            <%= t(".settings", default: "Settings") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete do %>
+            <%= t(".sign_out", default: "Log out") %>
+            <% end %>
+          </li>
+        </ul>
       </div>
-      <% end %>
     </div>
+  </div>
 
 
+  <!-- Dropdown appearing on mobile only -->
+  <div class="navbar-wagon-item hidden-md hidden-lg">
+    <div class="dropdown">
+      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+        <li style="margin-left: 20px">
+          Hello, <%= current_user.first_name.capitalize %>
+        </li>
+        <li>
+          <%= link_to account_path do %>
+          <%= t(".account", default: "Account") %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to "#" do %>
+          <%= t(".settings", default: "Settings") %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to destroy_user_session_path, method: :delete do %>
+          <%= t(".sign_out", default: "Log out") %>
+          <% end %>
+        </li>
+      </ul>
+    </div>
+  </div>
+<% end %>
 
-  <%= render 'shared/navbar-stepify'%>
+<%= render 'shared/navbar-stepify'%>
 
 
