Fixed organization show logo

--- a/app/assets/stylesheets/components/_org-card.scss
+++ b/app/assets/stylesheets/components/_org-card.scss
@@ -61,7 +61,28 @@
   text-align:center;
   padding-top:25px;
 }
+
+.org-thumbnail-show {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  border: none;
+  text-align:center;
+  margin-top: -100px;
+}
 .org-thumbnail img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  width: auto;
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+}
+
+.org-thumbnail-show img {
   position: absolute;
   left: 50%;
   top: 50%;
