--- a/app/assets/stylesheets/components/_org-card.scss
+++ b/app/assets/stylesheets/components/_org-card.scss
@@ -103,3 +103,32 @@
   justify-content: center;
   padding-top: 15px;
 }
+
+
+.org-banner{
+  position: relative;
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
+  border: none;
+  text-align:center;
+  padding-top:25px;
+}
+
+.org-banner img{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  width: auto;
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+}
+
+
+.org-banner img.portrait{
+  width: 100%;
+  height: 100%;
+  height: auto;
+}
