Fixed tabs in org show

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -15,7 +15,7 @@
 
 <% texto = "#{@organization.company_name}"%>
 <div class = "content-vertical-space">
-
+  <div class="container">
     <%= render 'shared/tabs_index_bootstrap_tabs', texto: texto%>
 
     <div class="container steplist-cards-background" style="padding: 0px; background-color: #284f8a;">
