--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -32,14 +32,15 @@
         </div>
         </div>
 
-
+    <div class="org-btn-container">
         <% if @organization.users.include?(current_user) && OrganizationUser.find_by(organization: @organization, user: @user).admin? %>
         <%= link_to 'Edit company info', edit_organization_path(@organization), class: 'btn btn-primary btn-xs'%>
         <% end %>
 
         <% if @organization.users.include?(current_user) %>
-        <%= link_to "Add steplists to this organization", new_steplist_path, class: 'btn btn-success btn-xs'  %>
+        <%= link_to "Add a steplist to #{@organization.company_name}", new_steplist_path, class: 'btn btn-success btn-xs'  %>
         <% end %>
+      </div>
 
         <div class="container">
           <div class="row">
@@ -68,5 +69,6 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 
