Fixed some details

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<div style="min-height: 100vh">
+<div class ="content-vertical-space">
 
 <div class="container">
   <div class="row">
@@ -15,7 +15,7 @@
           </div>
 
           <div class="form-actions">
-            <%= f.button :submit, "Send me reset password instructions", class: 'btn btn-primary' %>
+            <%= f.button :submit, "Send reset instructions", class: 'btn btn-primary' %>
           </div>
         <% end %>
 
