--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,7 +21,7 @@
             <% end %>
           </li>
           <li>
-            <%= link_to "#" do %>
+            <%= link_to edit_user_registration_path do %>
             <%= t(".settings", default: "Settings") %>
             <% end %>
           </li>
