Tabs nav color background

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -59,10 +59,12 @@ div{
     border: 1px solid #ddd0 !important;
     border-bottom-color: transparent !important;
     cursor: default !important;
+    border-top: solid
 }
 
 .nav-tabs {
   border-bottom: none!important;
+  background-color: #1e2a3a !important;
 }
 
 .row{
