--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,13 @@
     <meta property="og:site_name" content="Stepify"/>
     <meta name="google-site-verification" content="0APsCqqgnSbCUoNQXbSTlS-6gJMZCGQg-_61skl_Sbk" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,700,700i" rel="stylesheet">
+     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117246145-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-117246145-1');
+   </script>
 
 
   </head>
