--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,6 +7,45 @@
   </div>
 
 
+
+
+    <section id="Synthetize your knowledge" class="pad-xl">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-8 col-sm-offset-2 text-center margin-30 wow fadeIn" data-wow-delay="0.6s">
+            <h2>Be the first</h2>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipis.</p>
+          </div>
+        </div>
+
+        <div class="iphone wow fadeInUp" data-wow-delay="1s">
+          <img src="img/iphone.png">
+        </div>
+      </div>
+    </section>
+
+    <section id="main-info" class="pad-xl">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
+            <hr class="line purple">
+            <h3>App Feature One Here</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi.</p>
+          </div>
+          <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
+            <hr  class="line blue">
+            <h3>App Feature One Here</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi.</p>
+          </div>
+          <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
+            <hr  class="line yellow">
+            <h3>App Feature One Here</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
 <div class = "row">
   <div class="container">
     <div class="col-xs-12 col-lg-4">
@@ -26,3 +65,5 @@
 
 
 </div>
+
+
