--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,69 +1,41 @@
-<div class = "row main-banner">
+<div class = "main-banner">
   <div class="container home-banner-container">
     <%= image_tag "logo4.png", class: "home-logo"%>
     <h3 class="dashboard-text">Share knowledge, step by step.</h3>
     <%= link_to "Take your first step now", steplists_path, class: "btn btn-success home-banner-button" %>
-    </div>
   </div>
+</div>
 
 
-
-
-    <section id="Synthetize your knowledge" class="pad-xl">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-8 col-sm-offset-2 text-center margin-30 wow fadeIn" data-wow-delay="0.6s">
-            <h2>Be the first</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipis.</p>
-          </div>
-        </div>
-
-        <div class="iphone wow fadeInUp" data-wow-delay="1s">
-          <img src="img/iphone.png">
-        </div>
-      </div>
-    </section>
-
-    <section id="main-info" class="pad-xl">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
-            <hr class="line purple">
-            <h3>App Feature One Here</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi.</p>
-          </div>
-          <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
-            <hr  class="line blue">
-            <h3>App Feature One Here</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi.</p>
-          </div>
-          <div class="col-sm-4 wow fadeIn" data-wow-delay="1.2s">
-            <hr  class="line yellow">
-            <h3>App Feature One Here</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-<div class = "row">
+<section id="features-home-section">
   <div class="container">
-    <div class="col-xs-12 col-lg-4">
-      Image
+    <div class="row">
+      <div class="col-sm-4 fadeIn">
+        <div>
+          <%= image_tag "iphone.png", class: "features-image img"%>
+        </div>
+      </div>
+      <div class="col-sm-8 fadeIn" data-wow-delay="0.6s">
+        <div class='home-slider'>
+          <div class='home-slide1'>
+            <h3>App Feature One Here</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi.</p>
+          </div>
+          <div class='home-slide2'>
+            <h3>Second App feature</h3>
+            <p>Consectetur adipiscing elit. Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi. Lorem ipsum dolor sit amet.</p>
+          </div>
+          <div class='home-slide3'>
+            <h3>..And last feature here</h3>
+            <p>Adipiscing elit. Aliquam viverra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi.</p>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-xs-12 col-lg-8">
-      Features
-      <ul>
-        <li>First feature</li>
-        <li>Second feature</li>
-        <li>Third feature</li>
-        <li>Last feature</li>
-      </ul>
-    </div>
+
   </div>
-</div>
+</section>
 
 
-</div>
 
 
