--- a/app/views/visualizations/dashboard.html.erb
+++ b/app/views/visualizations/dashboard.html.erb
@@ -13,7 +13,7 @@
         </tr>
         <tr>
           <th>
-            Steps visualizations
+            Steps viewed
           </th>
           <td>
             <%= @my_views_sum  %>
@@ -21,7 +21,7 @@
         </tr>
         <tr>
           <th>
-            My created Steplists
+              Steplists Created
           </th>
           <td>
             <%= @my_steplists.count  %>
@@ -29,7 +29,7 @@
         </tr>
         <tr>
           <th>
-            Mi visualized created steplists
+            Completed Created steplists
           </th>
           <td>
             <%= @my_seen_steplists  %>
@@ -37,7 +37,7 @@
         </tr>
         <tr>
           <th>
-            Total visualizations of my Steplists
+            Views created Steplists
           </th>
           <td>
             <%= @views_for_my_steplists  %>
