--- a/app/views/shared/_step_card.html.erb
+++ b/app/views/shared/_step_card.html.erb
@@ -36,11 +36,14 @@
             <%= render 'shared/show_of_step', step: step %>
             <div class="modal-footer">
               <% unless index == 0 %>
-                <button class="btn btn-primary btn-md" data-toggle="modal" data-target="#Modalpopup_<%= step.steplist.steps.order(created_at: :asc)[index - 1].id %>" data-dismiss="modal"> Back</button>
+                <button class="btn btn-primary btn-md" data-toggle="modal" data-target="#Modalpopup_<%= step.steplist.steps.order(created_at: :asc)[index - 1].id %>" data-dismiss="modal"> BACK</button>
               <% end %>
               <% unless index == step.steplist.steps.size - 1 %>
                 <button class="btn btn-primary btn-md" data-toggle="modal" data-target="#Modalpopup_<%= step.steplist.steps.order(created_at: :asc)[index + 1].id %>" data-dismiss="modal"> NEXT
                 </button>
+              <% end %>
+              <% if index == step.steplist.steps.size - 1 %>
+                <button class="btn btn-success btn-md" data-toggle="modal"  data-dismiss="modal"> Done</button>
               <% end %>
             </div>
           </div>
