--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,24 +10,24 @@
 <section id="features-home-section">
   <div class="container">
     <div class="row">
-      <div class="col-sm-4 fadeIn">
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 fadeIn">
         <div>
           <%= image_tag "iphone.png", class: "features-image img"%>
         </div>
       </div>
-      <div class="col-sm-8 fadeIn" data-wow-delay="0.6s">
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6  fadeIn" data-wow-delay="0.6s">
         <div class='home-slider'>
           <div class='home-slide1'>
-            <h3>App Feature One Here</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi.</p>
+            <h3>Quickly create steplist</h3>
+            <p>Need to explain something quickly? Just create a steplist at Stepify and share it!</p>
           </div>
           <div class='home-slide2'>
-            <h3>Second App feature</h3>
+            <h3> Manage ... </h3>
             <p>Consectetur adipiscing elit. Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi. Lorem ipsum dolor sit amet.</p>
           </div>
           <div class='home-slide3'>
-            <h3>..And last feature here</h3>
-            <p>Adipiscing elit. Aliquam viverra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi.</p>
+            <h3>Share steplists with your friends, clients or coworkers</h3>
+            <p>...send them a steplist on the fly.</p>
           </div>
         </div>
       </div>
