--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,19 +15,20 @@
           <%= image_tag "iphone.png", class: "features-image img"%>
         </div>
       </div>
-      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6  fadeIn" data-wow-delay="0.6s">
-        <div class='home-slider'>
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 fadeIn" data-wow-delay="0.6s">
+        <div class='home-slider '>
           <div class='home-slide1'>
-            <h3>Quickly create steplist</h3>
-            <p>Need to explain something quickly? Just create a steplist at Stepify and share it!</p>
+            <h3>Quickly create steplists</h3>
+            <p>Need to explain a process quickly? Just create a steplist at Stepify and share it!</p>
           </div>
           <div class='home-slide2'>
-            <h3> Manage ... </h3>
-            <p>Consectetur adipiscing elit. Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi. Lorem ipsum dolor sit amet.</p>
+            <h3>A tool for micro-knowledge</h3>
+            <p>A new format to manage and organize encapsulated know-how.</p>
           </div>
           <div class='home-slide3'>
-            <h3>Share steplists with your friends, clients or coworkers</h3>
-            <p>...send them a steplist on the fly.</p>
+            <h3>Access instructions everywhere</h3>
+            <p>From corporate processes to everyday tasks, get instructions on the fly.</p>
+          </div>
           </div>
         </div>
       </div>
