button done at end of steplists show

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -26,3 +26,12 @@ float: right;
 .tag-link-text {
   color:white;
 }
+
+.align-center {
+  text-align: center;
+}
+
+.salmon{
+  background-color: $stepify-salmon;
+  border: solid  2px white;
+}
