welcome email configured with gmail group account

--- a/app/views/user_mailer/welcome.text.erb
+++ b/app/views/user_mailer/welcome.text.erb
@@ -1,3 +1,15 @@
 User#welcome
 
 <%= @greeting %>, find me in app/views/user_mailer/welcome.text.erb
+
+Thank you for joining Stepfy
+
+Our goal is to create a simple easy-to-use tool to help people grow their knowledge and achieve more in less time and with less effort
+
+We understand that we need a driven an engaged community in order to make our goals a reality.
+
+Please do not hesitate to share with us any feedback and suggestions you migth have
+
+Now create your first Steplist
+
+https://getstepify.com/steplists/new
