--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,5 +1,95 @@
-<h1>Hi, <%= @user.email %></h1>
+<h1 class='title'>Hello, <%= @user.first_name %></h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/welcome.html.erb
+  Thank you for joining Stepfy
 </p>
+
+<p>
+  Our goal is to create a simple easy-to-use tool to help people grow their knowledge and achieve more in less time and with less effort
+</p>
+
+<p>
+  We understand that we need a driven an engaged community in order to make our goals a reality.
+</p>
+<p>
+  Please do not hesitate to share with us any feedback and suggestions you migth have
+</p>
+
+<p>
+  Now create your first Steplist
+</p>
+
+<p class='button-p'>
+  <%= link_to 'Create a new Steplist', new_steplist_url, class: 'btn'  %>
+</p>
+
+<p>
+  Have a great day
+</p>
+
+<p>
+  Yours sincerly
+</p>
+<p>
+  The stepify team
+</p>
+
+<div class= 'logo-box'>
+  <a href="http://www.getstepify.com/">
+    <img src="http://res.cloudinary.com/dkkvtcelc/image/upload/v1524572824/logo5.png" alt="Stepify log image" class='logo-image'>
+  </a>
+</div>
+
+<p class="slogan">
+  "Every step counts"
+</p>
+
+<style>
+  body {
+    font-family: "Source Sans Pro", sans-serif;
+    color:white;
+    background-color: #284f8a;
+  }
+
+  .slogan {
+    font-style: italic;
+    font-size: 15px;
+    color: white;
+  }
+
+  .logo-image{
+    align-self: right;
+    max-width: 240px;
+    max-height: 240px;
+    background-color: black;
+    border-radius: 12px;
+    padding: 5px;
+    text-align: right;
+  }
+
+  .btn {
+    color: white;
+    text-decoration: none;
+    background-color: #FF6F5C;
+    border: 2px solid white;
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: normal;
+    text-align: center;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    white-space: nowrap;
+    padding: 6px 12px;
+    font-size: 18px;
+    line-height: 1.428571429;
+    border-radius: 9px;
+
+  }
+  .btn:hover {
+    background-color:white;
+    border: 2px solid #FF6F5C;
+    color:#FF6F5C;
+  }
+
+</style>
