fixed email format and typos

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,48 +1,52 @@
-<h1 class='title'>Hello, <%= @user.first_name %></h1>
+<body style="font-family:'Source Sans Pro' sans-serif; color:white background-color: #284f8a;">
 
-<p>
-  Thank you for joining Stepfy
-</p>
+  <h1 class='title'>Hello, <%= @user.first_name %></h1>
 
-<p>
-  Our goal is to create a simple easy-to-use tool to help people grow their knowledge and achieve more in less time and with less effort
-</p>
+  <p>
+    Thank you for joining Stepify
+  </p>
 
-<p>
-  We understand that we need a driven an engaged community in order to make our goals a reality.
-</p>
-<p>
-  Please do not hesitate to share with us any feedback and suggestions you migth have
-</p>
+  <p>
+    Our vision is to create an easy-to-use tool to help people grow their knowledge and achieve more
+  </p>
 
-<p>
-  Now create your first Steplist
-</p>
+  <p>
+    To make our vision come to life we need to build an engaged and motivated community, thats why e work hard for you to have a pleasant and useful experience from our site.
+  </p>
+  <p>
+    Please do not hesitate to share with us any feedback and suggestions that could help us make of Stepify a better tool and community.
+  </p>
 
-<p class='button-p'>
-  <%= link_to 'Create a new Steplist', new_steplist_url, class: 'btn'  %>
-</p>
+  <p>
+    And now that your in create your first Steplist
+  </p>
 
-<p>
-  Have a great day
-</p>
+  <p class='button-p'>
+    <%= link_to 'Create a new Steplist', new_steplist_url, class: 'btn', style: "color: white text-decoration:none background-color:#FF6F5C border:2px solid white display: inline-block margin-bottom:0 font-weight:normal text-align:center vertical-align:middle touch-action:manipulation cursor:pointer white-space:nowrap padding: 6px 12px font-size:18px line-height:1.428571429 border-radius:9px;" %>
+  </p>
 
-<p>
-  Yours sincerly
-</p>
-<p>
-  The stepify team
-</p>
+  <p>
+    Have a great day
+  </p>
 
-<div class= 'logo-box'>
-  <a href="http://www.getstepify.com/">
-    <img src="http://res.cloudinary.com/dkkvtcelc/image/upload/v1524572824/logo5.png" alt="Stepify log image" class='logo-image'>
-  </a>
-</div>
+  <p>
+    Yours sincerly
+  </p>
+  <p>
+    The Stepify team
+  </p>
 
-<p class="slogan">
-  "Every step counts"
-</p>
+  <div class= 'logo-box'>
+    <a href="http://www.getstepify.com/">
+      <img src="http://res.cloudinary.com/dkkvtcelc/image/upload/v1524572824/logo5.png" alt="Stepify log image" class='logo-image' style="align-self:right max-width:240px max-height:240px background-color:black border-radius:12px padding:5px text-align:right;">
+    </a>
+  </div>
+
+  <p class="slogan" style= "font-style:italic font-size:15px color: white;">
+    "Every step counts"
+  </p>
+
+</body>
 
 <style>
   body {
