--- a/app/views/user_mailer/welcome.text.erb
+++ b/app/views/user_mailer/welcome.text.erb
@@ -2,7 +2,7 @@ User#welcome
 
 <%= @greeting %>, find me in app/views/user_mailer/welcome.text.erb
 
-Thank you for joining Stepfy
+Thank you for joining Stepify
 
 Our goal is to create a simple easy-to-use tool to help people grow their knowledge and achieve more in less time and with less effort
 
