--- a/app/views/user_mailer/welcome.text.erb
+++ b/app/views/user_mailer/welcome.text.erb
@@ -1,15 +1,21 @@
-User#welcome
-
-<%= @greeting %>, find me in app/views/user_mailer/welcome.text.erb
+Hello, <%= @user.first_name %>
 
 Thank you for joining Stepify
 
-Our goal is to create a simple easy-to-use tool to help people grow their knowledge and achieve more in less time and with less effort
+Our vision is to create an easy-to-use tool to help people grow their knowledge and achieve more
 
-We understand that we need a driven an engaged community in order to make our goals a reality.
+To make our vision come to life we need to build an engaged and motivated community, thats why e work hard for you to have a pleasant and useful experience from our site.
 
-Please do not hesitate to share with us any feedback and suggestions you migth have
+Please do not hesitate to share with us any feedback and suggestions that could help us make of Stepify a better tool and community.
 
-Now create your first Steplist
+And now that your in create your first Steplist
 
 https://getstepify.com/steplists/new
+
+Have a great day
+
+Yours sincerly
+
+The Stepify team
+
+http://www.getstepify.com/
