--- a/app/views/user_mailer/welcome.text.erb
+++ b/app/views/user_mailer/welcome.text.erb
@@ -4,7 +4,7 @@ Thank you for joining Stepify
 
 Our vision is to create an easy-to-use tool to help people grow their knowledge and achieve more
 
-To make our vision come to life we need to build an engaged and motivated community, thats why e work hard for you to have a pleasant and useful experience from our site.
+To make our vision come to life we need to build an engaged and motivated community, thats why we work hard for you to have a pleasant and useful experience from our site.
 
 Please do not hesitate to share with us any feedback and suggestions that could help us make of Stepify a better tool and community.
 
